--- a/main.yml
+++ b/main.yml
@@ -1,9 +1,13 @@
 ---
 - hosts: all
-  roles: 
-    - role: base
-    - bastion
+  vars_files:
+    - ../extra-variables.yml
+  roles:
+    - role: oci-rsa-ansible-base
+      become: true
     - role: geerlingguy.clamav
       become: true
     - role: wazuh-ansible/wazuh-ansible/roles/wazuh/ansible-wazuh-agent
+      become: true
+    - role: bastion
       become: true
