--- a/main.yml
+++ b/main.yml
@@ -7,5 +7,7 @@
       become: true
     - role: geerlingguy.clamav
       become: true
+    - role: wazuh-ansible/wazuh-ansible/roles/wazuh/ansible-wazuh-agent
+      become: true
     - role: bastion
       become: true
