--- a/requirements.yml
+++ b/requirements.yml
@@ -4,4 +4,6 @@ roles:
     version: 1.3.2
   - name: oci-rsa-ansible-base
     src: git+ssh://git@bitbucket.oci.oraclecorp.com:7999/rsa/oci-rsa-ansible-base.git
+  - name: wazuh-ansible
+    src: git+https://github.com/wazuh/wazuh-ansible.git
 #collections:
