--- a/bastion/defaults/main.yml
+++ b/bastion/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
 # defaults file for bastion
-registration_ip: "{{ ossec['registration_address'] }}"
+registration_address: "wazuh-lb.wazuh-cluster.local"
