--- a/bastion/vars/main.yml
+++ b/bastion/vars/main.yml
@@ -3,7 +3,7 @@
 wazuh_manager_version: 4.1.5-1
 wazuh_agent_version: 4.1.5-1
 wazuh_managers:
-  - address: "{{ registration_ip }}"
+  - address: "{{ registration_address }}"
     port: 1514
     protocol: tcp
     api_port: 55000
