--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,6 @@
 ---
 roles:
   - name: oci-rsa-ansible-base
-    src: git+ssh://git@bitbucket.oci.oraclecorp.com:7999/rsa/oci-rsa-ansible-base.git
+    src: git+https://github.com/oracle-quickstart/oci-rsa-ansible-base.git
   - name: wazuh-ansible
     src: git+https://github.com/wazuh/wazuh-ansible.git
